Fixed z-index issue with contact form btn

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ a {
 body {
     line-height: 1.75;
     background-image: linear-gradient(to bottom right, #FF55D2, #A454FF);
+    z-index: 0;
+}
+
+body > * {
+    z-index: 2;
 }
 
 button {
@@ -91,7 +96,7 @@ header {
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 900;
+    z-index: 3;
     padding: 1rem 1rem 0 1rem;
     background-image: linear-gradient(white, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0));
     width: 100%;
@@ -324,18 +329,11 @@ small img.inline, button.inline img {
     margin: auto;
 } */
 
-/* For testing purposes; delete once done */
-main.contact {
-    height: 200vh;
-}
-
 #contact-form {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 800;
+    z-index: 1;
 }
 
 #contact-form button, #contact-form button:hover, #contact-form button:active {
